<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"/>


    <ImageView
        android:id="@+id/ivNoData"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/no_data"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/No_data_text"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/ivNoData"
        />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/clData"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <TextView
            android:id="@id/tvCityVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:text="@string/city_name"
            app:layout_constraintLeft_toLeftOf="@+id/tvCity"
            app:layout_constraintTop_toBottomOf="@+id/tvCity"
            />

        <TextView
            android:id="@id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            app:layout_constraintLeft_toLeftOf="@+id/tvCityVariable"
            app:layout_constraintTop_toBottomOf="@+id/tvCityVariable"
            />
        <TextView
            android:id="@id/tvTimeVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:text="@string/date"
            app:layout_constraintLeft_toLeftOf="@+id/tvTime"
            app:layout_constraintTop_toBottomOf="@+id/tvTime"
            />

        <TextView
            android:id="@id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tempreture"
            app:layout_constraintLeft_toLeftOf="@+id/tvTimeVariable"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeVariable"
            />

        <TextView
            android:id="@id/tvTempVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"
            android:text="@string/_14"
            app:layout_constraintLeft_toLeftOf="@+id/tvTemp"
            app:layout_constraintTop_toBottomOf="@+id/tvTemp"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        />

</android.support.v4.widget.DrawerLayout>